--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-markdown": "^8.0.4",
     "react-odometerjs": "^3.1.0",
     "react-wrap-balancer": "^0.3.0",
+    "tailwindcss-radix": "^2.7.0",
     "typescript": "4.9.4",
     "use-debounce": "^9.0.3"
   },
