--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vercel/analytics": "^0.1.6",
     "@vercel/og": "^0.0.26",
     "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "focus-trap-react": "^10.0.2",
@@ -40,6 +41,7 @@
     "react-markdown": "^8.0.4",
     "react-odometerjs": "^3.1.0",
     "react-wrap-balancer": "^0.3.0",
+    "tailwind-merge": "^1.8.1",
     "tailwindcss-radix": "^2.7.0",
     "typescript": "4.9.4",
     "use-debounce": "^9.0.3"
